--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,5 @@
 /*-----------------------------------------------------------------------------------
-    Template Name: mac365 - Shoes Store Bootstrap 5 Template
+    Template Name: mac365 - Store Bootstrap 5 Template
     Version: 1.0
 -----------------------------------------------------------------------------------
     
@@ -14,13 +14,9 @@
     06. Template default CSS
     07. Dashboad
     08. Default
-    09. Footer
     10. Header
-    11. Home
     12. Offcanvas
     13. Register
-    14. Brand
-    15. Product-detail
  
 https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap
@@ -35,10 +31,4 @@ https://fonts.gstatic.com">
 @import "offcanvas";
 @import "default";
 @import "header";
-@import "footer";
-@import "category-detail";
 @import "index";
-@import "product-detail";
-@import "blog";
-@import "lienhe";
-@import "thuemay";
