--- a/assets/scss/_default.scss
+++ b/assets/scss/_default.scss
@@ -1,224 +1,264 @@
 /*----------------------------------------*/
+
+
 /*  8. Default attr
 /*----------------------------------------*/
+
 .font-18-m {
-  font-size: 18px;
-  font-weight: 500;
-  color: #000;
+    font-size: 18px;
+    font-weight: 500;
+    color: #000;
 }
+
 .font-w-m {
-  font-weight: 500;
+    font-weight: 500;
 }
+
 .font-11 {
-  font-size: 11px;
+    font-size: 11px;
 }
+
 .font-12 {
-  font-size: 12px;
+    font-size: 12px;
 }
+
 .font-10 {
-  font-size: 10px;
+    font-size: 10px;
 }
+
 .font-13 {
-  font-size: 13px;
+    font-size: 13px;
 }
+
 .font-15 {
-  font-size: 15px;
+    font-size: 15px;
 }
+
 .font-16 {
-  font-size: 16px;
+    font-size: 16px;
 }
+
 .font-14 {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 .font-24 {
-  font-size: 24px;
+    font-size: 24px;
 }
+
 .font-17 {
-  font-size: 17px;
+    font-size: 17px;
 }
+
 .font-18 {
-  font-size: 18px;
+    font-size: 18px;
 }
+
 .font-20 {
-  font-size: 20px;
+    font-size: 20px;
 }
+
 .font-22 {
-  font-size: 20px;
+    font-size: 20px;
 }
+
 .font-25 {
-  font-size: 25px;
+    font-size: 25px;
 }
 
 .font-30 {
-  font-size: 30px;
+    font-size: 30px;
 }
+
 .font-36 {
-  font-size: 36px;
+    font-size: 36px;
 }
+
+.font-48 {
+    font-size: 48px;
+}
+
 .font-72 {
-  font-size: 72px;
+    font-size: 72px;
 }
 
 .mt-46 {
-  margin-top: 46px;
+    margin-top: 46px;
 }
-.mb-23 {
-  margin-bottom: 23px;
-}
-.mb-20 {
-  margin-bottom: 20px;
-}
-.mt-27 {
-  margin-top: 27px;
-}
-.mr-40 {
-  margin-right: 40px;
-}
-.mr-5p {
-  margin-right: 5px;
-}
-.mobile {
-  display: block;
-}
-.non-mobile {
-  display: none;
-}
-.line-bottom {
-  border-bottom: 1px solid #ccc;
-}
-.pointer {
-  cursor: pointer;
-}
-.inline {
-  display: inline !important;
-}
-.block-desktop {
-  display: none;
-}
-.mw-85 {
-  max-width: 85%;
-  margin: 10px auto;
-}
-.mh-m-25 {
-  max-height: 25px;
-}
-.w-48 {
-  width: 48%;
-}
-.w-82 {
-  width: 82%;
-}
-/*Smart phone nhỏ*/
-@media screen and (min-width: 992px) {
-  .w-50-desktop {
-    width: 50%;
-  }
-  .mh-m-25 {
-    max-height: unset;
-  }
-  .mwd-700 {
-    width: 700px;
-  }
-  .mw-85 {
-    max-width: unset;
-  }
-  .mobile {
-    display: none;
-  }
-  .non-mobile {
-    display: block;
-  }
-  .p20-desktop {
-    padding: 20px 5px !important;
-  }
-  .p20-desktop {
-    padding: 20px 5px !important;
-  }
-  .p-20-desktop {
-    padding: 20px !important;
-  }
-  .pl-30-desktop {
-    padding-left: 30px !important;
-  }
-  .p-30-desktop {
-    padding: 30px !important;
-  }
-  .py-20-desktop {
-    padding-top: 20px !important;
-    padding-bottom: 20px !important;
-  }
-  .px-10-desktop {
-    padding-left: 10px !important;
-    padding-right: 10px !important;
-  }
-  .p35-desktop {
-    padding: 35px !important;
-  }
-  .w-50-desktop {
-    width: 50% !important;
-  }
 
-  .inline-desktop {
+.mb-23 {
+    margin-bottom: 23px;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.mt-27 {
+    margin-top: 27px;
+}
+
+.mr-40 {
+    margin-right: 40px;
+}
+
+.mr-5p {
+    margin-right: 5px;
+}
+
+.mobile {
+    display: block;
+}
+
+.non-mobile {
+    display: none;
+}
+
+.line-bottom {
+    border-bottom: 1px solid #ccc;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.inline {
     display: inline !important;
-  }
-  .block-desktop {
-    display: block !important;
-  }
-  .mb-50-desktop {
-    margin-bottom: 50px !important;
-  }
-  .pt-20-desktop {
-    padding-top: 20px !important;
-  }
-  .pt-30-desktop {
-    padding-top: 30px !important;
-  }
-  .font-30-desktop {
-    font-size: 30px !important;
-  }
-  .font-17-desktop {
-    font-size: 17px !important;
-  }
-  .font-18-desktop {
-    font-size: 18px !important;
-  }
-  .font-15-desktop {
-    font-size: 15px !important;
-  }
-  .font-16-desktop {
-    font-size: 16px !important;
-  }
-  .font-13-desktop {
-    font-size: 13px !important;
-  }
-  .font-12-desktop {
-    font-size: 12px !important;
-  }
-  .font-28-desktop {
-    font-size: 28px !important;
-  }
-  .font-21-desktop {
-    font-size: 21px !important;
-  }
-  .font-40-desktop {
-    font-size: 40px !important;
-  }
-  .font-56-desktop {
-    font-size: 56px !important;
-  }
-  .font-72-desktop {
-    font-size: 72px !important;
-  }
-  .mt-20-desktop {
-    margin-top: 20px !important;
-  }
-  .mt-22-desktop {
-    margin-top: 22px !important;
-  }
-  .mt-30-desktop {
-    margin-top: 30px !important;
-  }
-  .mb-20-desktop {
-    margin-bottom: 20px !important;
-  }
+}
+
+.block-desktop {
+    display: none;
+}
+
+.mw-85 {
+    max-width: 85%;
+    margin: 10px auto;
+}
+
+.mh-m-25 {
+    max-height: 25px;
+}
+
+.w-48 {
+    width: 48%;
+}
+
+.w-82 {
+    width: 82%;
+}
+
+
+/*Smart phone nhỏ*/
+
+@media screen and (min-width: 992px) {
+    .w-50-desktop {
+        width: 50%;
+    }
+    .mh-m-25 {
+        max-height: unset;
+    }
+    .mwd-700 {
+        width: 700px;
+    }
+    .mw-85 {
+        max-width: unset;
+    }
+    .mobile {
+        display: none;
+    }
+    .non-mobile {
+        display: block;
+    }
+    .p20-desktop {
+        padding: 20px 5px !important;
+    }
+    .p20-desktop {
+        padding: 20px 5px !important;
+    }
+    .p-20-desktop {
+        padding: 20px !important;
+    }
+    .pl-30-desktop {
+        padding-left: 30px !important;
+    }
+    .p-30-desktop {
+        padding: 30px !important;
+    }
+    .py-20-desktop {
+        padding-top: 20px !important;
+        padding-bottom: 20px !important;
+    }
+    .px-10-desktop {
+        padding-left: 10px !important;
+        padding-right: 10px !important;
+    }
+    .p35-desktop {
+        padding: 35px !important;
+    }
+    .w-50-desktop {
+        width: 50% !important;
+    }
+    .inline-desktop {
+        display: inline !important;
+    }
+    .block-desktop {
+        display: block !important;
+    }
+    .mb-50-desktop {
+        margin-bottom: 50px !important;
+    }
+    .pt-20-desktop {
+        padding-top: 20px !important;
+    }
+    .pt-30-desktop {
+        padding-top: 30px !important;
+    }
+    .font-30-desktop {
+        font-size: 30px !important;
+    }
+    .font-17-desktop {
+        font-size: 17px !important;
+    }
+    .font-18-desktop {
+        font-size: 18px !important;
+    }
+    .font-15-desktop {
+        font-size: 15px !important;
+    }
+    .font-16-desktop {
+        font-size: 16px !important;
+    }
+    .font-13-desktop {
+        font-size: 13px !important;
+    }
+    .font-12-desktop {
+        font-size: 12px !important;
+    }
+    .font-28-desktop {
+        font-size: 28px !important;
+    }
+    .font-21-desktop {
+        font-size: 21px !important;
+    }
+    .font-40-desktop {
+        font-size: 40px !important;
+    }
+    .font-56-desktop {
+        font-size: 56px !important;
+    }
+    .font-72-desktop {
+        font-size: 72px !important;
+    }
+    .mt-20-desktop {
+        margin-top: 20px !important;
+    }
+    .mt-22-desktop {
+        margin-top: 22px !important;
+    }
+    .mt-30-desktop {
+        margin-top: 30px !important;
+    }
+    .mb-20-desktop {
+        margin-bottom: 20px !important;
+    }
 }
