--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -22,9 +22,10 @@ https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap
 -----------------------------------------------------------------------------------*/
 
-/*-- Google Font --*/
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
+/*-- Google Font --*/
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 @import "mixins";
 @import "variables";
 @import "common";
@@ -32,3 +33,4 @@ https://fonts.gstatic.com">
 @import "default";
 @import "header";
 @import "index";
+@import "home";
