Update some section home and structure appmobile page

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -22,7 +22,6 @@ https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap
 -----------------------------------------------------------------------------------*/
 
-
 /*-- Google Font --*/
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
@@ -32,5 +31,6 @@ https://fonts.gstatic.com">
 @import "offcanvas";
 @import "default";
 @import "header";
-@import "index";
+// @import "index";
 @import "home";
+@import "appmobile";
